--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 500px) {
+@media screen and (min-width: 500px) {
 .body-class {background-color: #FFFFCC;}
 
 .header-class {background-color: #CCCCCC;color: #FF3300;font-size:160%;text-align:center;font-family:verdana}
